tests/error/type_mismatch.vow
// TEST: stderr "TypeMismatch"
module TypeMismatch

fn main() -> i32 {
  let x: bool = 42;
  0
}
